# learn-python-intermediate

./: .gitignore  README.md  meta.ipynb  pyproject.toml
books/: builtin-functions-1.ipynb  builtin-functions-2.ipynb  builtin-functions-3.ipynb  builtin-functions.ipynb  comprehensions.ipynb  context-manager.ipynb  io-file.ipynb  lambda-functions.ipynb  meta-programming.ipynb  oop.ipynb
