[tool.poetry]
name = "learn-python-intermediate"
version = "0.1.0"
description = ""
authors = ["KhanhIceTea <khanhicetea@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
codetiming = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
